Move songlist message logic to own utils class